# tools

./: .gitignore  Makefile.am  alsa_in.c  alsa_out.c  connect.c  evmon.c  ipload.c  ipunload.c  lsp.c  property.c  transport.c
alsa_midi/: a2j.h  a2j_in.la  alsa_midi.c  port.c  port_thread.c
zalsa/: Makefile.am  alsathread.cc  alsathread.h  jackclient.cc  jackclient.h  lfqueue.h  pxthread.cc  zita-a2j.cc  zita-j2a.cc
